--- a/Portfolio/welcome.html
+++ b/Portfolio/welcome.html
@@ -15,9 +15,9 @@
 
     <script>
         var typed = new Typed(".auto-type", {
-            strings: ["Welcome" , "Please click Explore"],
+            strings: ["Welcome to Myles Taylor's Portfolio." , "Please click Explore to continue."],
             typeSpeed: 60,
-            backSpeed : 60,
+            backSpeed : 20,
         })
     </script>
 </body>
