--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -12,7 +12,7 @@
 <div id="header">
     <div class="container">
         <nav>
-            <img src=" class="logo">
+            <img src= "class="logo">
             <ul>
                 <li><a href="#">Home</a></li>
                 <li><a href="#">About</a></li>
@@ -115,6 +115,31 @@
                 </div>
             </div>
         </div>
+        <a href="#" class="btn">See more</a>
+    </div>
+</div>
+<!---------contact--------->
+<div class="contact">
+    <div class="container">
+        <div class="row">
+            <div class="contact-left">
+                <h1 class="sub-title">Contact Me</h1>
+                <p><i class="fa-sharp fa-regular fa-paper-plane"></i> mylestaylor16@outlook.com</p>
+                <p><i class="fa-solid fa-phone"></i> 07512207702</p>
+                <a href="" download class="btn btn2">Download CV</a>
+            </div>
+            <div class="contact-right">
+                <form>
+                    <input type="text" name="Name" placeholder="Your Name" required>
+                    <input type="email" name="Email" placeholder="Your Email" required>
+                    <textarea name="Message" rows="6" placeholder="Your Message"></textarea>
+                    <button type="submit" class="btn btn2">Submit</button>
+                </form>
+            </div>
+        </div>
+    </div>
+    <div class="copyright">
+        <p>Copyright @ Myles Taylor</p>
     </div>
 </div>
 
