--- a/Portfolio/welcome.html
+++ b/Portfolio/welcome.html
@@ -18,6 +18,7 @@
             strings: ["Welcome to Myles Taylor's Portfolio." , "Please click Explore to continue."],
             typeSpeed: 60,
             backSpeed : 20,
+            loop: true,
         })
     </script>
 </body>
