--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -22,7 +22,7 @@
             </ul>
         </nav>
         <div class="header-text">
-            <p>Web <span>Developer</span></p>
+            <p><span class = "multiple-text"></span></p>
             <h1>Hello, I'm <span>Myles</span><br>From Birmingham, England</h1> 
         </div>
     </div>
@@ -159,6 +159,9 @@
         document.getElementById(tabname).classList.add("active-tab");
 }
 </script>
+
+<script src="https://unpkg.com/typed.js@2.0.15/dist/typed.umd.js"></script>
+<script src="script.js"></script>                                                                   
 
 </body>
 </html>
