--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -12,13 +12,13 @@
 <div id="header">
     <div class="container">
         <nav>
-            <img src= "class="logo">
+            <img src= "">
             <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">About</a></li>
-                <li><a href="#">Services</a></li>
-                <li><a href="#">Portfolio</a></li>
-                <li><a href="#">Contact</a></li>
+                <li><a href="#header">Home</a></li>
+                <li><a href="#about">About</a></li>
+                <li><a href="#services">Services</a></li>
+                <li><a href="#portfolio">Portfolio</a></li>
+                <li><a href="#contact">Contact</a></li>
             </ul>
         </nav>
         <div class="header-text">
@@ -69,18 +69,16 @@
             <div>
                 <i class="fas fa-code fa-spin fa-spin-reverse"></i>
                 <h2>Web Developement (HTML,CSS,JS)</h2>
-                <p>wfwffrgefrwefeereqrgwrg
-                    effefwfwf
+                <p>
                 </p>
-                <a href="#">Learn more</a>
+                <a href="#"></a>
             </div>
             <div>
                 <i class="fa-sharp fa-solid fa-laptop-code fa-spin fa-spin-reverse"></i>
                 <h2>Software Testing (Manual/Automation)</h2>
-                <p>wfwffrgefrwefeereqrgwrg
-                    fefewfefeffef
+                <p>
                 </p>
-                <a href="#">Learn more</a>
+                <a href="#"></a>
             </div>
         </div>
     </div>
@@ -93,9 +91,9 @@
             <div class="work">
                 <img src="Images/code-1.jpg">
                 <div class="layer">
-                    <h3>Demo Website</h3>
-                    <p>Demo demo demo demo demo demo demo</p>
-                    <a href="#"><i class="fa-solid fa-up-right-from-square"></i></a>
+                    <h3>Coffee Website</h3>
+                    <p>This is my Coffee Shop website called Cup of Delight</p>
+                    <a href="https://github.com/MylesCodes98/Coffee-Shop"><i class="fa-solid fa-up-right-from-square"></i></a>
                 </div>
             </div>
             <div class="work">
@@ -115,7 +113,7 @@
                 </div>
             </div>
         </div>
-        <a href="#" class="btn">See more</a>
+        <a href="https://github.com/MylesCodes98/" class="btn">See more</a>
     </div>
 </div>
 <!---------contact--------->
@@ -124,17 +122,19 @@
         <div class="row">
             <div class="contact-left">
                 <h1 class="sub-title">Contact Me</h1>
-                <p><i class="fa-sharp fa-regular fa-paper-plane"></i> mylestaylor16@outlook.com</p>
+                <p><i class="fa-sharp fa-regular fa-paper-plane"></i> mylestaylor1998@gmail.com</p>
                 <p><i class="fa-solid fa-phone"></i> 07512207702</p>
                 <a href="" download class="btn btn2">Download CV</a>
             </div>
             <div class="contact-right">
-                <form>
+                <form name="submit-to-google-sheet">
                     <input type="text" name="Name" placeholder="Your Name" required>
                     <input type="email" name="Email" placeholder="Your Email" required>
                     <textarea name="Message" rows="6" placeholder="Your Message"></textarea>
                     <button type="submit" class="btn btn2">Submit</button>
                 </form>
+
+                <span id="msg"></span>
             </div>
         </div>
     </div>
@@ -162,6 +162,25 @@
 
 <script src="https://unpkg.com/typed.js@2.0.15/dist/typed.umd.js"></script>
 <script src="script.js"></script>                                                                   
+
+<script>
+    const scriptURL = 'https://script.google.com/macros/s/AKfycbyrjs7G1pNCq5E9d9zkwAFoWlDr2EKMbKOABgS5IOsZjAP-Z2zPvaJPUiQDQUq7PUE/exec'
+    const form = document.forms['submit-to-google-sheet']
+    const msg = document.getElementById("msg")
+  
+    form.addEventListener('submit', e => {
+      e.preventDefault()
+      fetch(scriptURL, { method: 'POST', body: new FormData(form)})
+        .then(response => {
+            msg.innerHTML = "Message sent successfully"
+            setTimeout(function(){
+                msg.innerHTML = ""
+            },5000)
+            form.reset()
+        })
+        .catch(error => console.error('Error!', error.message))
+    })
+  </script>
 
 </body>
 </html>
