--- a/Portfolio/welcome.html
+++ b/Portfolio/welcome.html
@@ -4,21 +4,21 @@
     <meta name="viewport" content="width=device-width, initial scale=1.0">
     <title>Welcome</title>
     <link rel="stylesheet" href="welcome.css"> 
+    <meta http-equiv='refresh' content='5; URL=http://127.0.0.1:5500/index.html'>
 </head>
 <body>
     <div class="container">
         <h1><span class="auto-type"></span></h1>
     </div>
-    <a href="http://127.0.0.1:5500/index.html"class="btn">Explore</a>
+    <a href="http://127.0.0.1:5500/index.html"></a>
 
     <script src="https://unpkg.com/typed.js@2.0.15/dist/typed.umd.js"></script>
 
     <script>
         var typed = new Typed(".auto-type", {
-            strings: ["Welcome to Myles Taylor's Portfolio." , "Please click Explore to continue."],
+            strings: ["Welcome to Myles Taylor's Portfolio."],
             typeSpeed: 60,
             backSpeed : 20,
-            loop: true,
         })
     </script>
 </body>
