--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -89,27 +89,27 @@
         <h1 class="sub-title">My Work</h1>
         <div class="work-list">
             <div class="work">
-                <img src="Images/code-1.jpg">
+                <img src="Images/coffee-table.jpg">
                 <div class="layer">
                     <h3>Coffee Website</h3>
-                    <p>This is my Coffee Shop website called Cup of Delight</p>
+                    <p>This is my Coffee Shop website called Cup of Delight.</p>
                     <a href="https://github.com/MylesCodes98/Coffee-Shop"><i class="fa-solid fa-up-right-from-square"></i></a>
                 </div>
             </div>
             <div class="work">
-                <img src="Images/code-2.jpg">
+                <img src="Images/calc-background.jpg">
                 <div class="layer">
-                    <h3>Demo Website</h3>
-                    <p>Demo demo demo demo demo demo demo</p>
-                    <a href="#"><i class="fa-solid fa-up-right-from-square"></i></a>
+                    <h3>Calculator</h3>
+                    <p>Custom Calculator created as a starter project.</p>
+                    <a href="https://github.com/MylesCodes98/Calculator"><i class="fa-solid fa-up-right-from-square"></i></a>
                 </div>
             </div>
             <div class="work">
-                <img src="Images/code-3.jpg">
+                <img src="Images/pokedex.jpg">
                 <div class="layer">
-                    <h3>Demo Website</h3>
-                    <p>Demo demo demo demo demo demo demo</p>
-                    <a href="#"><i class="fa-solid fa-up-right-from-square"></i></a>
+                    <h3>Pokedex (PokeAPI)</h3>
+                    <p>Pokedex created using the PokeAPI.</p>
+                    <a href="https://github.com/MylesCodes98/Pokedex"><i class="fa-solid fa-up-right-from-square"></i></a>
                 </div>
             </div>
         </div>
@@ -117,12 +117,12 @@
     </div>
 </div>
 <!---------contact--------->
-<div class="contact">
+<div id="contact">
     <div class="container">
         <div class="row">
             <div class="contact-left">
                 <h1 class="sub-title">Contact Me</h1>
-                <p><i class="fa-sharp fa-regular fa-paper-plane"></i> mylestaylor1998@gmail.com</p>
+                <p><i class="fa-sharp fa-regular fa-paper-plane"></i> mylestaylor16@outlook.com</p>
                 <p><i class="fa-solid fa-phone"></i> 07512207702</p>
                 <a href="" download class="btn btn2">Download CV</a>
             </div>
