--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -100,8 +100,8 @@
                 <img src="Images/calc-background.jpg">
                 <div class="layer">
                     <h3>Calculator</h3>
-                    <p>Custom Calculator created as a starter project.</p>
-                    <a href="https://github.com/MylesCodes98/Calculator"><i class="fa-solid fa-up-right-from-square"></i></a>
+                    <p>Movie App showcasing movies using the TMDB API.</p>
+                    <a href="https://github.com/MylesCodes98/MovieApp-API/tree/main"><i class="fa-solid fa-up-right-from-square"></i></a>
                 </div>
             </div>
             <div class="work">
