--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -97,9 +97,9 @@
                 </div>
             </div>
             <div class="work">
-                <img src="Images/calc-background.jpg">
+                <img src="Images/movie-background.jpeg">
                 <div class="layer">
-                    <h3>Calculator</h3>
+                    <h3>Movie App (TMDB API)</h3>
                     <p>Movie App showcasing movies using the TMDB API.</p>
                     <a href="https://github.com/MylesCodes98/MovieApp-API/tree/main"><i class="fa-solid fa-up-right-from-square"></i></a>
                 </div>
